更改啟動方法

--- a/data/server.properties
+++ b/data/server.properties
@@ -1,5 +1,3 @@
-#Minecraft server properties
-#Mon Oct 31 14:48:37 GMT 2022
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -9,7 +7,7 @@ enable-query=false
 generator-settings={}
 enforce-secure-profile=true
 level-name=world
-motd=A Minecraft Server v1.12.2
+motd=A Minecraft Server
 query.port=25565
 pvp=true
 generate-structures=true
